Whitespace and Bugs Removed from Checkout

--- a/lf_style.css
+++ b/lf_style.css
@@ -1,3 +1,15 @@
+/* Magento  NOTICE OF LICENSE
+ * This source file is subject to the Academic Free License (AFL 3.0) that is bundled with this package in the file LICENSE_AFL.txt.
+ * It is also available through the world-wide-web at this URL:* http://opensource.org/licenses/afl-3.0.php
+ * If you did not receive a copy of the license and are unable to obtain it through the world-wide-web,please send an email
+ * to license@magentocommerce.com so we can send you a copy immediately.
+ * DISCLAIMER
+ * Do not edit or add to this file if you wish to upgrade Magento to newer versions in the future. If you wish to customize Magento for your
+ * needs please refer to http://www.magentocommerce.com for more information.
+ * @category    design
+ * @package     default_default
+ * @copyright   Copyright (c) 2013 Magento Inc. (http://www.magentocommerce.com)
+ * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0) */
 /*@import url(//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic);
 @import url(//fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(//fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700,700italic,900,900italic);*/
@@ -216,7 +228,7 @@ p.required { font-size: 11px; text-align: right; color: #EB340A; }
 .breadcrumbs li strong { font-weight: 300; color: #343434; }
 .breadcrumbs ul { margin: 0; padding: 15px 0; }
 /* Page Heading */
-.page-title { width: 100%; overflow: hidden; margin: 25px 0; }
+.page-title { width: 100%; overflow: hidden; margin: 0 0 10px; }
 .page-title h1, .page-title h2, .page-title-wrapper h1, .page-title-wrapper h2 { font-size: 20px; color: #222; text-transform: uppercase; font-weight: 400; }
 .page-title h1 span, .page-title h2 span, .page-title-wrapper h1 span, .page-title-wrapper h2 span { font-size: 20px; }
 .page-title .separator { margin: 0 3px; }
@@ -293,7 +305,7 @@ p.required { font-size: 11px; text-align: right; color: #EB340A; }
 .cart-summary span.value { font-size: 13px !important; }
 .value table { border: #e1e1e1 1px solid; }
 .value table tr:nth-child(odd) { background-color: #f2f2f2; }
-.cart-summary > .title { margin-top: 2rem; margin-bottom: -30px; text-transform: uppercase; font-size: inherit; font-weight: bold; }
+.cart-summary > .title { margin-top: 2rem; /*margin-bottom: -30px;*/ text-transform: uppercase; font-size: inherit; font-weight: bold; }
 .cart.table-wrapper .product-image-container { display: inline-block; }
 .checkout-cart-index .cart.table-wrapper .product-image-container { display: inline-block; }
 .checkout-index-index .content-seach, .checkout-index-index .content-cart { display: none; }
@@ -774,9 +786,9 @@ visibility: visible; }
 .page .block h1, .page .block h2 { text-align: center; color: #4f7e84 !important; font-weight: bold; letter-spacing: 4px; }
 .page .block p { margin: 10px 0 20px; }
 .magiccart-column { padding-bottom: 20px; padding-top: 20px; }
-.block { padding: 20px 0; margin: 10px 0; }
+/*.block { padding: 20px 0; margin: 10px 0; }
+.block { margin: 20px 0; }*/
 /* Sidebar =============================================================================== */
-.block { margin: 20px 0; }
 .block h4 { letter-spacing: 2px; }
 .block-reorder .actions a { clear: both; display: block; padding-top: 10px; padding-right: 10px; }
 .sidebar .block.block-progress { padding: 0; }
@@ -1024,7 +1036,7 @@ visibility: visible; }
 .login-container .block { margin: 0; }
 /*.product-view .page-title { margin: 80px 0 0 !important; }*/
 .fotorama__stage__frame .fotorama__img { vertical-align: top !important; }
-.page-title { margin: 120px 0 0; }
+/*.page-title { margin: 120px 0 0; }*/
 .customer-account-login .page-title { margin: 25px 0; }
 .customer-account-create .page-title { margin: 25px 0; }
 /* Paypal */
@@ -1735,9 +1747,10 @@ visibility: visible; }
 .cart .data-table .btn-remove2 .icons { font-size: 15px; }
 .crosssell .products-textlink { border: 0 none !important; }
 .cart-empty { text-align: center; }
-.checkout-cart-index .page-title-wrapper { padding: 20px 0; text-align: center; }
+.checkout-cart-index .page-title-wrapper { /*padding: 20px 0;*/ text-align: center; }
 .checkout-cart-index .page-title-wrapper .page-title span { font-size: 20px; font-weight: 400;/*color: #333;*/ font-family: "VFF Helvetica Neue Bold"; float: left; }
 .checkout-cart-index .page-main-pal { margin-bottom: 30px; }
+.cart-summary .block .fieldset { margin: 0; }
 /* Checkout Types */
 .cart .page-title .checkout-types li { margin: 0 0 5px; }
 .cart .title-buttons .checkout-types { float: right; display: none; }
